Added references to db context in webapi

--- a/SchedulerTelegramBot/appsettings.Development.json
+++ b/SchedulerTelegramBot/appsettings.Development.json
@@ -6,9 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionString": {
+  "ConnectionStrings": {
     "Hangfire": "",
-    "Main": ""
+    "Main": "Host=localhost;Port=5432;Database=waterdb;Username=postgres;Password=password"
   },
   "Webhook": "https://schedulertelegrambot.conveyor.cloud/api/message/update"
 }
