--- a/SchedulerTelegramBot/appsettings.Development.json
+++ b/SchedulerTelegramBot/appsettings.Development.json
@@ -7,8 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "Hangfire": "",
-    "Main": "Host=localhost;Port=5432;Database=waterdb;Username=postgres;Password=password"
+    "Hangfire": "Host=localhost;Port=5432;Database=HangfireScheduleDB;Username=postgres;Password=password",
+    "Main": "Host=localhost;Port=5432;Database=ScheduleDB;Username=postgres;Password=password"
   },
   "Webhook": "https://schedulertelegrambot.conveyor.cloud/api/message/update"
 }
