Added proper way of getting the file from telegram api

--- a/SchedulerTelegramBot/appsettings.Development.json
+++ b/SchedulerTelegramBot/appsettings.Development.json
@@ -9,5 +9,6 @@
   "ConnectionStrings": {
     "Main": "Host=localhost;Port=5432;Database=ScheduleDB;Username=postgres;Password=password"
   },
-  "Webhook": "https://schedulertelegrambot.conveyor.cloud/api/message/update"
+  "Webhook": "https://schedulertelegrambot.conveyor.cloud/api/message/update",
+  "DownloadFilesLocationBase": "C:\\Files\\"
 }
