Removed namespace inconsistencies

--- a/SchedulerTelegramBot.Tests/SchedulerTelegramBot.Tests.csproj
+++ b/SchedulerTelegramBot.Tests/SchedulerTelegramBot.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SchedulerTelegramBot\WebAPI.csproj" />
+    <ProjectReference Include="..\WebAPI\WebAPI.csproj" />
   </ItemGroup>
 
 </Project>
