Removed intermediate files

--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -10,5 +10,5 @@
     "Main": "Host=localhost;Port=5432;Database=ScheduleDB;Username=postgres;Password=password"
   },
   "Webhook": "https://schedulertelegrambot.conveyor.cloud/api/message/update",
-  "DownloadFilesLocationBase": "C:\\Files\\"
+  "UseLongPulling" : "true"
 }
